// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncSwitch should render correctly 1`] = `
<div>
  <div
    class="rmd-toggle-container rmd-switch-container rmd-switch--async"
  >
    <span
      class="rmd-switch"
    >
      <input
        class="rmd-switch__input"
        id="switch"
        type="checkbox"
      />
      <label
        aria-hidden="true"
        class="rmd-switch__ball"
        for="switch"
      />
    </span>
  </div>
</div>
`;

exports[`AsyncSwitch should render correctly 2`] = `
<div>
  <div
    class="rmd-toggle-container rmd-switch-container rmd-switch--async"
  >
    <span
      class="rmd-switch"
    >
      <input
        aria-busy="true"
        aria-describedby="switch-loading"
        class="rmd-switch__input"
        id="switch"
        type="checkbox"
      />
      <label
        aria-hidden="true"
        class="rmd-switch__ball"
        for="switch"
      >
        <span
          aria-valuemax="100"
          aria-valuemin="0"
          class="rmd-circular-progress rmd-switch__progress"
          id="switch-loading"
          role="progressbar"
        >
          <svg
            class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
            viewBox="0 0 66 66"
          >
            <circle
              class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
              cx="33"
              cy="33"
              r="30"
            />
          </svg>
        </span>
      </label>
    </span>
  </div>
</div>
`;
